--- a/homework_04/css/style.css
+++ b/homework_04/css/style.css
@@ -7,6 +7,37 @@
 /* Локальне підключення шрифтів */
 @import url('fonts.css');
 
+.article{
+   font-size: 24px; 
+}
+h2 {
+    font-size: 64px;
+    text-decoration: underline;
+    text-decoration-color: chocolate;
+    text-transform: uppercase;
+    letter-spacing: 20px;
+}
+
+h3 {
+    font-size: 36px;
+    font-weight: 600;
+    font-style: italic;
+    color: coral;
+    text-align: center;
+    word-spacing: 10px;
+}
+
+p > span {
+    text-decoration: line-through;
+   
+}
+.example {
+    text-shadow: 11px 2px 12px rgba(24,8,75,1); 
+    text-decoration: none;
+    font-weight: 600;
+    line-height: 1.5;
+}
+
 .blog_detail > p {
 font-family: 'Poppins', sans-serif;
 font-size: 20px;
